[gd_scene load_steps=7 format=3 uid="uid://c4skiho4j6vjn"]

[ext_resource type="Texture2D" uid="uid://c3pbnw16wyg28" path="res://Assets/UI/Boveda.jpg" id="1_udis2"]
[ext_resource type="Script" uid="uid://cfiou2t86w2ko" path="res://ui/hub/bank_panel.gd" id="1_x0502"]
[ext_resource type="PackedScene" uid="uid://b5jojh26118kn" path="res://ui/hub/inventory_container.tscn" id="2_udis2"]
[ext_resource type="FontFile" uid="uid://b2p50emcdbfkt" path="res://Assets/Fonts/alegreya-sans/AlegreyaSans-Regular.ttf" id="4_e1jaj"]

[sub_resource type="FontVariation" id="FontVariation_7ls34"]
base_font = ExtResource("4_e1jaj")

[sub_resource type="LabelSettings" id="LabelSettings_x0502"]
font_size = 12

[node name="BankPanel" type="TextureRect" node_paths=PackedStringArray("_bankInventoryContainer", "_playerInventoryContainer", "_infoLabel", "_quantitySpinBox", "_goldLabel", "_quantityGoldSpinBox")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -231.0
offset_top = -266.0
offset_right = 231.0
offset_bottom = 266.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_udis2")
script = ExtResource("1_x0502")
_bankInventoryContainer = NodePath("BankInventory")
_playerInventoryContainer = NodePath("PlayerInventory")
_infoLabel = NodePath("Info")
_quantitySpinBox = NodePath("Quantity")
_goldLabel = NodePath("LblGold")
_quantityGoldSpinBox = NodePath("QuantityGold")
metadata/_edit_lock_ = true

[node name="BtnClose" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 27.0
offset_right = 434.0
offset_bottom = 47.0

[node name="Quantity" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 203.0
offset_top = 256.0
offset_right = 290.0
offset_bottom = 287.0
min_value = 1.0
max_value = 10000.0
value = 1.0
rounded = true
update_on_text_changed = true

[node name="PlayerInventory" parent="." instance=ExtResource("2_udis2")]
custom_minimum_size = Vector2(160, 160)
layout_mode = 0
offset_left = 266.0
offset_top = 159.0
offset_right = 426.0
offset_bottom = 415.0
columns = 5

[node name="BankInventory" parent="." instance=ExtResource("2_udis2")]
custom_minimum_size = Vector2(160, 256)
layout_mode = 0
offset_left = 37.0
offset_top = 159.0
offset_right = 197.0
offset_bottom = 351.0
columns = 5

[node name="Info" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = 183.0
offset_right = 96.0
offset_bottom = 238.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_7ls34")
theme_override_font_sizes/font_size = 12
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="QuantityGold" type="SpinBox" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 2.0
offset_top = -176.0
offset_right = 92.0
offset_bottom = -145.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1e+07
rounded = true
update_on_text_changed = true

[node name="LblGold" type="Label" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 236.0
offset_top = -470.0
offset_right = 319.0
offset_bottom = -453.0
grow_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_x0502")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="BtnExtractGold" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 332.0
offset_top = 71.0
offset_right = 416.0
offset_bottom = 113.0

[node name="BtnDepositGold" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 45.0
offset_top = 68.0
offset_right = 152.0
offset_bottom = 110.0

[node name="BtnExtract" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 223.0
offset_top = 291.0
offset_right = 240.0
offset_bottom = 308.0

[node name="BtnDeposit" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 222.0
offset_top = 233.0
offset_right = 239.0
offset_bottom = 250.0

[connection signal="pressed" from="BtnClose" to="." method="_on_btn_close_pressed"]
[connection signal="pressed" from="BtnExtractGold" to="." method="_on_btn_extract_gold_pressed"]
[connection signal="pressed" from="BtnDepositGold" to="." method="_on_btn_deposit_gold_pressed"]
[connection signal="pressed" from="BtnExtract" to="." method="_on_btn_extract_pressed"]
[connection signal="pressed" from="BtnDeposit" to="." method="_on_btn_deposit_pressed"]
